--- a/src/sass/_admindash.scss
+++ b/src/sass/_admindash.scss
@@ -11,7 +11,7 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  z-index: 2;
+  z-index: -1;
 
   &::before {
     content: "";
@@ -20,6 +20,7 @@
     background: rgba(63, 157, 208, 0.5);
     position: fixed;
     right: 0;
+    z-index: -1;
   }
 
   &::after {
@@ -31,6 +32,7 @@
     position: fixed;
     bottom: 0px;
     right: 0px;
+    z-index: -1;
   }
 }
 
@@ -40,7 +42,6 @@
   width: auto;
   @extend %flex;
   flex-direction: column;
-  z-index: 7;
 }
 
 .panel-admindash {
